docs/apache-airflow-providers-amazon/9.4.0/_sources/_api/airflow/providers/amazon/aws/sensors/glue_crawler/index.rst.txt
airflow.providers.amazon.aws.sensors.glue_crawler
=================================================

.. py:module:: airflow.providers.amazon.aws.sensors.glue_crawler


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.sensors.glue_crawler.GlueCrawlerSensor


Module Contents
---------------

.. py:class:: GlueCrawlerSensor(*, crawler_name, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.sensors.base_aws.AwsBaseSensor`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.glue_crawler.GlueCrawlerHook`\ ]


   Waits for an AWS Glue crawler to reach any of the statuses below.

   'FAILED', 'CANCELLED', 'SUCCEEDED'

   .. seealso::
       For more information on how to use this sensor, take a look at the guide:
       :ref:`howto/sensor:GlueCrawlerSensor`

   :param crawler_name: The AWS Glue crawler unique name
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: crawler_name


   .. py:attribute:: success_statuses
      :value: 'SUCCEEDED'



   .. py:attribute:: errored_statuses
      :value: ('FAILED', 'CANCELLED')



   .. py:method:: poke(context)

      Override when deriving this class.



